third_party/move/move-compiler-v2/tests/unit_test/test/other_failures_invalid_location_module.exp

Diagnostics:
error: unbound module
  ┌─ tests/unit_test/test/other_failures_invalid_location_module.move:6:51
  │
6 │     #[expected_failure(arithmetic_error, location=0x2::m)]
  │                                                   ^^^^^^ Unbound module '0x2::m'
